Mon Aug 30 12:07:00 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/base/mean.m: Use .', not ' to reorient row vectors.

Tue Aug 17 11:11:27 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/pack.m: New function.

Mon Aug 16 07:46:57 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/figure.m: Always return figure number.  With no args,
 	figure now creates a new figure window and returns its number.
	Accept figure (property, value) syntax, but do nothing.

Thu Aug 12 09:28:01 PDT 1999  Tom Poage <tfpoage@ucdavis.edu>

	* general/shift.m: Avoid printing temporary value for backward shift.

Mon Aug  2 16:39:04 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/bar.m: Compute bar widths correctly when x-values are not
	evenly spaced.

Mon Jul 12 22:48:34 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/cond.m: Avoid returning NaN for matrices that
	contain only zeros.

Sun Jun 20 22:24:27 1999  Eduardo Gallestey <eduardo@faceng.anu.edu.au>

	* linear-algebra/kron.m: Create result matrix and insert blocks
	instead of appending them.

Sat Jun 19 01:52:18 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/bodquist.m, control/buildssic.m, control/is_digital.m,
	control/stepimp.m, control/sysmin.m, control/syssetsignals.m:
	Update from A. S. Hodel.

Fri Jun 18 12:19:22 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* polynomial/polyfit.m: Correct previous change.

Wed Apr  7 13:57:26 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/qrhouse.m, linear-algebra/krygetq.m: Delete.

Wed Apr  7 13:22:43 1999  A. S. Hodel <a.s.hodel@eng.auburn.edu>

	* control/is_controllable.m, control/zgscal.m: Accomodate new
	version of krylov and krylovb.

	* control/outlist.m, control/sysout.m: Fix typos.

	* control/sysdimensions.m: Add option for total number of states.

	* linear-algebra/krylov.m: Improve robustness by row-pivoting.
	* linear-algebra/krylovb.m: Just call krylov with appropriate
	arguments.
